--- a/app/src/main/res/menu/home_navigation.xml
+++ b/app/src/main/res/menu/home_navigation.xml
@@ -2,28 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menu_home"
-        android:icon="@android:drawable/ic_menu_search"
+        android:id="@+id/nav_home"
+        android:icon="@drawable/ic_home"
         android:title="Home" />
 
     <item
-        android:id="@+id/menu_catch"
+        android:id="@+id/nav_catch"
         android:icon="@drawable/ic_catch_area"
         android:title="Catch" />
 
     <item
-        android:id="@+id/camera"
+        android:id="@+id/nav_camera"
         android:title="" />
 
 
     <item
-        android:id="@+id/menu_catch_history"
-        android:icon="@android:drawable/ic_menu_search"
+        android:id="@+id/nav_catch_history"
+        android:icon="@drawable/ic_history"
         android:title="History" />
 
 
     <item
-        android:id="@+id/menu_profile"
+        android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile"
         android:title="Profile" />
 </menu>
