--- a/app/src/main/res/layout/fragment_verify.xml
+++ b/app/src/main/res/layout/fragment_verify.xml
@@ -1,129 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".auth.VerifyFragment">
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
+    tools:context=".auth.LoginOption">
 
     <ImageView
-        android:id="@+id/iv_dots"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/dots"
-        app:layout_constraintBottom_toTopOf="@+id/guideline1"
-        app:layout_constraintDimensionRatio="100:84"
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="72dp"
+        android:src="@drawable/ic_otp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/iv_space"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="@id/iv_dots"
-        app:layout_constraintDimensionRatio="16:9"
-        app:layout_constraintEnd_toEndOf="@id/iv_dots"
-        app:layout_constraintStart_toStartOf="@id/iv_dots"
-        app:layout_constraintTop_toTopOf="@id/iv_dots" />
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Did you get it?"
+        android:textColor="@color/black"
+        android:textSize="48dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        tools:layout_editor_absoluteX="-16dp" />
 
     <TextView
-        android:id="@+id/tvHeader"
-        style="@style/HeaderText"
-        android:layout_width="wrap_content"
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:alpha="0.9"
-        android:text="VERIFICATION CODE"
-        app:layout_constraintBottom_toTopOf="@+id/tvBody"
+        android:layout_marginTop="8dp"
+        android:text="We have send you a verification code trough SMS. Please drop it bellow, and don’t give it to any one!"
+        android:textSize="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+
+    <com.alimuzaffar.lib.pin.PinEntryEditText
+        android:id="@+id/etCode"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:layout_marginTop="24dp"
+        android:maxLength="6"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/guideline1"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:pinAnimationType="popIn" />
 
     <TextView
-        android:id="@+id/tvBody"
-        style="@style/BodyText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Enter the six digit verification code sent to your mobile."
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
-        app:layout_constraintEnd_toEndOf="@+id/tvHeader"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tvHeader"
-        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline1"
+        android:id="@+id/resend_otp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.33" />
+        android:text="resend code"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etCode" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
+    <TextView
+        android:id="@+id/resend_otp_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.66" />
+        android:text=" after 30s"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/resend_otp"
+        app:layout_constraintStart_toEndOf="@+id/resend_otp" />
 
-    <com.google.android.material.card.MaterialCardView
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnVerify"
+        style="@style/ButtonFilled"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="80dp"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="3dp"
+        android:layout_height="wrap_content"
+        android:text="Verify"
+        android:layout_marginBottom="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/guideline2">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <com.alimuzaffar.lib.pin.PinEntryEditText
-                android:id="@+id/etCode"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="48dp"
-                android:layout_marginEnd="48dp"
-                android:inputType="number"
-                android:maxLength="6"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@id/btnVerify"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:pinAnimationType="popIn" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnVerify"
-                style="@style/ButtonFilled"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginEnd="40dp"
-                android:maxLength="6"
-                android:text="Verify"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="270:50"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/etCode" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.google.android.material.card.MaterialCardView>
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
