--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.SpeciesDetectionAndroid" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -24,16 +24,16 @@
     </style>
 
     <style name="ButtonFilled" parent="Widget.MaterialComponents.Button.UnelevatedButton">
-        <item name="cornerRadius">24dp</item>
-        <item name="textAllCaps">false</item>
-        <item name="backgroundColor">#8a2be2</item>
+        <item name="cornerRadius">4dp</item>
+        <item name="textAllCaps">true</item>
+        <item name="backgroundColor">@color/colorPrimary</item>
     </style>
 
     <style name="ButtonOutlined" parent="Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="cornerRadius">24dp</item>
-        <item name="textAllCaps">false</item>
+        <item name="cornerRadius">4dp</item>
+        <item name="textAllCaps">true</item>
         <item name="strokeWidth">1dp</item>
-        <item name="strokeColor">@color/colorAccent</item>
+        <item name="strokeColor">#d9d9d9</item>
     </style>
 
     <style name="BodyText">
