added roboto fonts

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:text="Users Name"
         android:textSize="20sp"
+        android:fontFamily="@font/roboto_medium"
         android:layout_marginStart="16dp"
         android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -33,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Users Type"
+        android:fontFamily="@font/roboto"
         android:layout_marginTop="1dp"
         app:layout_constraintStart_toStartOf="@+id/username"
         app:layout_constraintTop_toBottomOf="@+id/username" />
@@ -59,6 +61,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
             android:text="Insurance Program"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -82,6 +85,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:text="EDIT YOUR PLAN"
+            android:fontFamily="@font/roboto_medium"
             app:layout_constraintTop_toBottomOf="@+id/rvInsurance"
             android:layout_marginTop="8dp"/>
 
