--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="primaryLight">#99B9E8</color>
     <color name="blackText">#000</color>
+    <color name="colorPrimaryLight">#A5A5A5</color>
 </resources>
