--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -21,5 +21,5 @@
     string in this file.
     -->
 <!--    AIzaSyAaeAdNp-FdOcSm8p3hwC4lusxjaUFcAyg -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAaeAdNp-FFcAyg</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAaeAdNp-FdOcSm8p3hwC4lusxjaUFcAyg</string>
 </resources>
