--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="primaryLight">#99B9E8</color>
     <color name="blackText">#000</color>
     <color name="colorPrimaryLight">#A5A5A5</color>
+    <color name="gray">#FAFAFA</color>
 </resources>
