--- a/app/src/main/res/layout/fish_catched_information.xml
+++ b/app/src/main/res/layout/fish_catched_information.xml
@@ -1,140 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    android:orientation="vertical"
-    android:padding="15dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical"
+    android:padding="15dp">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <androidx.cardview.widget.CardView
-            app:cardCornerRadius="10dp"
             android:layout_width="match_parent"
-            android:layout_height="250dp">
+            android:layout_height="250dp"
+            app:cardCornerRadius="10dp">
+
             <ImageView
                 android:id="@+id/fishImageViewFinal"
-                android:scaleType="fitXY"
-                android:src="@drawable/lutjanus_sebae"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/lutjanus_sebae" />
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
-            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:foregroundGravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/fishNameTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:text="Fish Name"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:textStyle="bold" />
+
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
                 <TextView
-                    android:textColor="@android:color/black"
-                    android:text="CATCH WEIGHT "
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="ESTIMATED CATCH WEIGHT "
+                    android:textColor="@android:color/black" />
+
                 <TextView
                     android:id="@+id/fishWeightTextView"
-                    android:textColor="@android:color/black"
-                    android:text="50 KG"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="50 KG"
+                    android:textColor="@android:color/black" />
             </LinearLayout>
         </LinearLayout>
 
 
         <LinearLayout
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
             <androidx.cardview.widget.CardView
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:layout_marginRight="5dp"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1">
+
                 <LinearLayout
-                    android:padding="10dp"
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
                     <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="Selling Price Per-Kg"
-                        android:textColor="@android:color/black"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:textColor="@android:color/black" />
+
                     <TextView
-                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="$2.5"
-                        android:textSize="35sp"
                         android:textColor="@android:color/black"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:textSize="35sp"
+                        android:textStyle="bold" />
+
                     <TextView
-                        android:text="+20% from last week"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:text="+20% from last week" />
 
                     <ImageView
-                        android:scaleType="fitXY"
-                        android:src="@drawable/bargraph"
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"/>
+                        android:layout_height="100dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/bargraph" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:layout_weight="1"
-                android:layout_margin="1dp"
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="1dp"
                 android:layout_marginLeft="5dp"
-                android:layout_height="match_parent">
+                android:layout_weight="1">
+
                 <LinearLayout
-                    android:padding="10dp"
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
                     <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="Estimated Earnings"
-                        android:textColor="@android:color/black"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:textColor="@android:color/black" />
+
                     <TextView
-                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="$95"
-                        android:textSize="35sp"
                         android:textColor="@android:color/black"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:textSize="35sp"
+                        android:textStyle="bold" />
+
                     <TextView
-                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:text="$102"
-                        android:textSize="35sp"
                         android:textColor="@android:color/black"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:textSize="35sp"
+                        android:textStyle="bold" />
+
                     <TextView
-                        android:layout_marginTop="20sp"
-                        android:textSize="10sp"
-                        android:text="*the price might be different"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20sp"
+                        android:text="*the price might be different"
+                        android:textSize="10sp" />
                 </LinearLayout>
 
 
@@ -144,18 +159,18 @@
 
 
         <Button
-            android:text="SAVE CATCH INFORMATION"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="70dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
+            android:text="SAVE CATCH INFORMATION"
+            android:textColor="@android:color/white" />
 
         <Button
-            android:backgroundTint="@color/white"
-            android:textColor="@color/common_google_signin_btn_text_light_focused"
-            android:text="EDIT THE INFORMATION"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:text="EDIT THE INFORMATION"
+            android:textColor="@color/common_google_signin_btn_text_light_focused" />
 
     </LinearLayout>
 
