day 2 session complete

--- a/app/src/main/res/layout/catchweight_alert.xml
+++ b/app/src/main/res/layout/catchweight_alert.xml
@@ -1,85 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    app:cardCornerRadius="15dp"
-    android:layout_gravity="center"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:layout_margin="20dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    app:cardCornerRadius="15dp">
 
     <LinearLayout
-        android:padding="20dp"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="20dp">
+
         <TextView
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/black"
-            android:text="Please Mention The Estimated Catch Weight"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="Please Mention The Estimated Catch Weight"
+            android:textColor="@android:color/black"
+            android:textSize="20sp" />
 
         <androidx.cardview.widget.CardView
-            app:cardBackgroundColor="@android:color/darker_gray"
-            android:layout_marginTop="15dp"
-            app:cardCornerRadius="7dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            app:cardBackgroundColor="@android:color/darker_gray"
+            app:cardCornerRadius="7dp">
 
             <LinearLayout
-                android:padding="5dp"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="5dp">
+
                 <EditText
                     android:id="@+id/editTextWeight"
-                    android:inputType="numberDecimal"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="10"
-                    android:textSize="20sp"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"/>
+                    android:inputType="numberDecimal"
+                    android:textSize="16sp" />
+
                 <TextView
-                    android:layout_weight="1"
-                    android:textSize="20sp"
-                    android:text="Kg"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Kg"
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:text="*Required"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="*Required" />
 
 
         <LinearLayout
-            android:layout_gravity="right"
-            android:gravity="right"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="15dp"
+            android:gravity="right"
+            android:orientation="horizontal">
+
             <TextView
-                android:textSize="22sp"
-                android:textColor="#ADD8E6"
-                android:text="CANCEL"
+                android:id="@+id/cancel"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="CANCEL"
+                android:textColor="#ADD8E6" />
 
             <TextView
                 android:id="@+id/save"
-                android:textStyle="bold"
-                android:layout_marginLeft="25dp"
-                android:textSize="22sp"
-                android:textColor="#000058"
-                android:text="SAVE"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:text="SAVE"
+                android:textColor="#000058" />
 
         </LinearLayout>
     </LinearLayout>
