--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -6,4 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.CompassActivity">
 
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Current Location: Dwarka"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <edu.arbelkilani.compass.Compass
+        android:id="@+id/compass"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="16sp"
+        android:layout_marginEnd="16sp"
+        app:border_color="@android:color/holo_red_dark"
+        app:degree_color="@android:color/holo_blue_light"
+        app:degree_value_color="@color/colorAccent"
+        app:degrees_step="5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv"
+        app:orientation_labels_color="@android:color/holo_red_dark"
+        app:show_border="false"
+        app:show_degree_value="false"
+        app:show_orientation_labels="true" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
