--- a/app/src/main/res/layout/fish_catched_information.xml
+++ b/app/src/main/res/layout/fish_catched_information.xml
@@ -88,12 +88,12 @@
                         android:textColor="@android:color/black" />
 
                     <TextView
+                        android:id="@+id/selling_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="$2.5"
                         android:textColor="@android:color/black"
-                        android:textSize="35sp"
-                        android:textStyle="bold" />
+                        android:textSize="34sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -128,21 +128,12 @@
                         android:textColor="@android:color/black" />
 
                     <TextView
+                        android:id="@+id/estimated_earning"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="$95"
+                        android:text="$95 - $102"
                         android:textColor="@android:color/black"
-                        android:textSize="35sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:text="$102"
-                        android:textColor="@android:color/black"
-                        android:textSize="35sp"
-                        android:textStyle="bold" />
+                        android:textSize="34sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -157,8 +148,108 @@
 
         </LinearLayout>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="Detected Fish"
+            android:textColor="@color/black"
+            android:textSize="20dp" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:elevation="8dp"
+            app:cardCornerRadius="8dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/ivfish1"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:scaleType="fitCenter"
+                    android:background="@android:color/darker_gray"
+                    android:src="@drawable/cantherhines"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tvfish1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16sp"
+                    android:layout_marginTop="16sp"
+                    android:text="cantherhines_pardalis"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toEndOf="@+id/ivfish1"
+                    app:layout_constraintTop_toTopOf="@+id/ivfish1" />
+
+                <TextView
+                    android:id="@+id/tvfish1ratio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="50% from overall catch result"
+                    android:textSize="16sp"
+                    app:layout_constraintStart_toStartOf="@+id/tvfish1"
+                    app:layout_constraintTop_toBottomOf="@+id/tvfish1" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/lutjanus"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:elevation="8dp"
+            android:layout_marginTop="8dp"
+            app:cardCornerRadius="8dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/ivfish2"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:scaleType="fitCenter"
+                    android:background="@android:color/darker_gray"
+                    android:src="@drawable/lutjanus"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tvfish2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16sp"
+                    android:layout_marginTop="16sp"
+                    android:text="Lutjanus Sebae"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toEndOf="@+id/ivfish2"
+                    app:layout_constraintTop_toTopOf="@+id/ivfish2" />
+
+                <TextView
+                    android:id="@+id/tvfish2ratio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="50% from overall catch result"
+                    android:textSize="16sp"
+                    app:layout_constraintStart_toStartOf="@+id/tvfish2"
+                    app:layout_constraintTop_toBottomOf="@+id/tvfish2" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
 
         <Button
+            android:id="@+id/save_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
