--- a/app/src/main/res/layout/fragment_login_option.xml
+++ b/app/src/main/res/layout/fragment_login_option.xml
@@ -46,24 +46,12 @@
         android:gravity="center_horizontal"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:text="Welcome to Sehatmandh"
-        app:layout_constraintBottom_toTopOf="@+id/tvBody"
+        android:text="Welcome to AAIDeS"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/guideline1"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <TextView
-        android:id="@+id/tvBody"
-        style="@style/BodyText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Minimizing the spread of infections by going paperless.\n Using Machine Learning to monitor public surveillance cameras"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
-        app:layout_constraintEnd_toEndOf="@+id/tvHeader"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tvHeader"
-        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
