--- a/app/src/main/res/layout/fragment_phone_number.xml
+++ b/app/src/main/res/layout/fragment_phone_number.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvfish2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -36,7 +36,7 @@
         android:layout_marginTop="8dp"
         android:text="Before use our apps we need to identified you. It would help us to give a rellevant content based on your history"
         android:textSize="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/tvfish2" />
 
 
     <com.google.android.material.textfield.TextInputLayout
