--- a/app/src/main/res/layout/fragment_verify.xml
+++ b/app/src/main/res/layout/fragment_verify.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvfish2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -36,7 +36,7 @@
         android:layout_marginTop="8dp"
         android:text="We have send you a verification code trough SMS. Please drop it bellow, and don’t give it to any one!"
         android:textSize="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/tvfish2" />
 
 
     <com.alimuzaffar.lib.pin.PinEntryEditText
